# openEV

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_server.py  start.sh
app/: __init__.py  environment.py  graders.py  main.py  models.py
server/: __init__.py  app.py
tests/: test_api.py  test_openapi_schema.py  test_openenv_spec.py  test_scoring.py
