[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warehouse-inventory-openenv"
version = "1.0.0"
description = "OpenEnv warehouse inventory management environment"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Shashank" }
]
dependencies = [
  "fastapi==0.104.1",
  "uvicorn[standard]==0.24.0",
  "pydantic==2.5.0",
  "numpy==1.26.4",
  "openenv-core>=0.2.0",
  "openai>=2.7.2",
  "requests==2.31.0",
  "python-dotenv==1.0.0",
  "httpx==0.25.2"
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
  "pytest==7.4.3",
  "pytest-asyncio==0.21.1"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*", "server*"]
